# ab_calculator

./: .gitignore  Makefile  README.md  app.py  basic_app.py  prob.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/: effect_size.py  mde.py  sample_size.py  solver.py
src/frontend/: ui.py
src/frontend/streamlit_pages/: about.py  calculate_sample_size.py
tests/src/: test_effect_size.py  test_mde.py
