[project]
name = "ab-calculator"
version = "0.1.0"
description = ""
authors = [
    {name = "Dasha",email = "digreen17@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit (>=1.46.1,<2.0.0)",
    "pyarrow (==7.0)",
    "numpy (<2.0)",
    "watchdog (>=6.0.0,<7.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
ipykernel = "^6.29.5"
pytest = "^8.4.0"
